--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="/cities">
+                    <a href="/auth/cities">
                         <img src="/images/cities.jpg" class="card-img-top" alt="Cities">
                     </a>
                     <div class="card-body">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="/languages">
+                    <a href="/auth/languages">
                         <img src="/images/languages.jpg" class="card-img-top" alt="Languages">
                     </a>
                     <div class="card-body">
