--- a/src/main/resources/templates/auth/countries/detail.html
+++ b/src/main/resources/templates/auth/countries/detail.html
@@ -109,7 +109,7 @@
         </div>
         <div class="card-footer">
             <a href="/auth/countries" class="btn btn-primary">Back to List</a>
-            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/auth/countries/edit/{id}(id=${country.code})}" class="btn btn-warning">Edit</a>
+            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/auth/countries/edit/{id}(id=${country.getCode()})}" class="btn btn-warning">Edit</a>
 
             <form th:action="@{/auth/countries/delete/{id}(id=${country.code})}" method="post" style="display:inline;">
                 <input type="hidden" name="_method" value="delete"/>
